# comunicarlos

./: .dockerignore  .gitignore  Dockerfile  comunicarlos_test_collection.json  docker-compose.yaml  mongo-init.js  pyproject.toml  requirements.txt
Comunicarlos API Test Suite/: bruno.json  collection.bru
Comunicarlos API Test Suite/1. Autenticación y Setup/: Configurar Supervision.bru  Crear Incidente (Solicitante) copy.bru  Login Operador.bru  Login Solicitante copy.bru  Login Solicitante.bru  Login Supervisor.bru  Login Tecnico.bru  Logout.bru  Refresh Token.bru  Registro Operador.bru  Registro Solicitante.bru  Registro Supervisor.bru  Registro Tecnico.bru  folder.bru
Comunicarlos API Test Suite/2. Flujo Incidente Completo/: Agregar Comentario (Tecnico).bru  Asignar Tecnico (Operador).bru  Crear Incidente (Solicitante).bru  Listar Tecnicos (Operador).bru  Reabrir Incidente (Solicitante).bru  Resolver Incidente (Tecnico).bru  Ver Notificaciones (Supervisor).bru  folder.bru
Comunicarlos API Test Suite/3. Flujo Solicitud Servicio/: Mis Servicios (Solicitante).bru  Solicitar Alta (Solicitante).bru  Solicitar Baja.bru  folder.bru
Comunicarlos API Test Suite/4. Validaciones y Errores/: Acceso Denegado (Solicitante a ruta Operador).bru  Crear Incidente con Datos Inválidos.bru  folder.bru
Comunicarlos API Test Suite/5. Reportes y Dashboards/: Dashboard Operador.bru  Dashboard Tecnico.bru  folder.bru
app/: config.py  main.py
app/dependencies/: auth.py  repositories.py  services.py
app/domain/: __init__.py  enums.py  exceptions.py
app/routers/: asignaciones.py  (+7 more)
(+37 files in other folders)
